--- a/front/components/MapContainer/Map/mapIcon/style.css
+++ b/front/components/MapContainer/Map/mapIcon/style.css
@@ -29,6 +29,16 @@
   background: var(--globals-colours-white);
 }
 
+.editing {
+    background: linear-gradient(300deg,var(--globals-colours-red), var(--globals-colours-orange));
+    border: var(--globals-colours-white) solid 2px;
+    cursor: move;
+}
+
+.editing .innerIcon {
+  background: var(--globals-colours-white);
+}
+
 .photo {
     display: block;
     width: 1.25rem;
